# TrivialDB

./: .gitignore  CMakeLists.txt  README.md
doc/: report.tex
src/: defs.h  main.cpp
src/btree/: btree.cpp  btree.h  iterator.h
src/database/: database.cpp  database.h  dbms.cpp  dbms.h
src/expression/: expression.cpp  expression.h  serialization.cpp
src/fs/: fid_manager.h  page_file.h  page_fs.cpp  page_fs.h  pager.h
src/index/: index.cpp  index.h
src/page/: data_page.cpp  data_page.h  fixed_page.h  index_leaf_page.h  overflow_page.h  page_defs.h  pager.cpp  pager.h  small_page.h  variant_page.cpp  variant_page.h
src/parser/: CMakeLists.txt  defs.h  execute.cpp  execute.h  sql.l  sql.y
src/table/: record.cpp  record.h  table.cpp  table.h  table_header.cpp  table_header.h
src/utils/: comparer.h  type_cast.h  utils.h
test/: test_btree.cpp  test_data_page.cpp  test_fixed_page.cpp  test_index_btree.cpp  test_int_btree.cpp  test_small_page.cpp  test_table.cpp  test_variant_page.cpp
testcase/: run_test.py  test.sql  test1.sql  test2.py  test3.py  test4.py  test_alias.py  test_check.sql  test_date.sql  test_default.sql  test_foreign.sql  test_link.sql  test_link3.sql  test_null.sql  test_primary.sql  test_unique.sql
testcase/ans/: test1.ans  test_check.ans  test_date.ans  test_default.ans  test_foreign.ans  test_link.ans  test_link3.ans  test_null.ans  test_primary.ans  test_unique.ans
